[package]
name = "airgradient_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
influxdb2 = "0.5.1"
# switch to reqwest as influxdb2 already uses it
#ureq = {version="*", default-features=false, features=["json"]}
reqwest = {version="*", default-features=false, features=["json"]}
serde = "*"
config = {version="*" , default-features=false, features=["async", "toml"]}
chrono = {version="*", features=["now"]}
futures = "*"
# we're not actually using async features, but it's easier to maintain the coding style
tokio = {version="1.3.8", features=["rt-multi-thread", "macros"]}
