[package]
name = "airgradient_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
influxdb2 = "*"
# switch to reqwest as influxdb2 already uses it
#ureq = {version="*", default-features=false, features=["json"]}
reqwest = {version="*", default-features=false, features=["json"]}
serde = "*"
config = {version="*" , default-features=false, features=["async", "toml"]}
chrono = {version="*", features=["now"]}
futures = "*"
# we're not actually using async features, but it's easier to maintain the coding style
tokio = {version="*", features=["rt-multi-thread", "macros"]}
